fix(authoring): SD-3179 Fixed layout issue on category dropdown

--- a/client/app/scripts/superdesk/menu/styles/menu.less
+++ b/client/app/scripts/superdesk/menu/styles/menu.less
@@ -235,7 +235,7 @@
                 opacity: 1;
             }
         }
-        .dropleft {
+        .dropright {
             .dropdown-menu {
                 top: -10px;
             }
